// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render default - value[0] 1`] = `
<div
  className="ant-skeleton {}"
>
  <div
    className="ant-skeleton-content"
  >
    <h3
      className="ant-skeleton-title"
      style={
        Object {
          "width": "38%",
        }
      }
    />
    <ul
      className="ant-skeleton-paragraph"
    >
      <li
        style={
          Object {
            "width": undefined,
          }
        }
      />
      <li
        style={
          Object {
            "width": undefined,
          }
        }
      />
      <li
        style={
          Object {
            "width": "61%",
          }
        }
      />
    </ul>
  </div>
</div>
`;

exports[`Render properties.active - value[0] 1`] = `
<div
  className="ant-skeleton {} ant-skeleton-active"
>
  <div
    className="ant-skeleton-content"
  >
    <h3
      className="ant-skeleton-title"
      style={
        Object {
          "width": "38%",
        }
      }
    />
    <ul
      className="ant-skeleton-paragraph"
    >
      <li
        style={
          Object {
            "width": undefined,
          }
        }
      />
      <li
        style={
          Object {
            "width": undefined,
          }
        }
      />
      <li
        style={
          Object {
            "width": "61%",
          }
        }
      />
    </ul>
  </div>
</div>
`;

exports[`Render properties.avatar boolean - value[0] 1`] = `
<div
  className="ant-skeleton {} ant-skeleton-element"
>
  <span
    className="ant-skeleton-avatar {} ant-skeleton-avatar-circle"
    style={Object {}}
  />
</div>
`;

exports[`Render properties.avatar object circle - value[0] 1`] = `
<div
  className="ant-skeleton {} ant-skeleton-element"
>
  <span
    className="ant-skeleton-avatar {} ant-skeleton-avatar-lg ant-skeleton-avatar-circle"
    style={Object {}}
  />
</div>
`;

exports[`Render properties.avatar object square - value[0] 1`] = `
<div
  className="ant-skeleton {} ant-skeleton-element"
>
  <span
    className="ant-skeleton-avatar {} ant-skeleton-avatar-sm ant-skeleton-avatar-square"
    style={Object {}}
  />
</div>
`;

exports[`Render properties.button object circle - value[0] 1`] = `
<div
  className="ant-skeleton {} ant-skeleton-element"
>
  <span
    className="ant-skeleton-button {} ant-skeleton-button-lg ant-skeleton-button-circle"
    style={Object {}}
  />
</div>
`;

exports[`Render properties.button object round - value[0] 1`] = `
<div
  className="ant-skeleton {} ant-skeleton-element"
>
  <span
    className="ant-skeleton-button {} ant-skeleton-button-sm ant-skeleton-button-round"
    style={Object {}}
  />
</div>
`;

exports[`Render properties.paragraph boolean - value[0] 1`] = `
<div
  className="ant-skeleton {}"
>
  <div
    className="ant-skeleton-content"
  >
    <h3
      className="ant-skeleton-title"
      style={
        Object {
          "width": undefined,
        }
      }
    />
  </div>
</div>
`;

exports[`Render properties.paragraph object width all - value[0] 1`] = `
<div
  className="ant-skeleton {}"
>
  <div
    className="ant-skeleton-content"
  >
    <h3
      className="ant-skeleton-title"
      style={
        Object {
          "width": "38%",
        }
      }
    />
    <ul
      className="ant-skeleton-paragraph"
    >
      <li
        style={
          Object {
            "width": undefined,
          }
        }
      />
      <li
        style={
          Object {
            "width": undefined,
          }
        }
      />
      <li
        style={
          Object {
            "width": 300,
          }
        }
      />
    </ul>
  </div>
</div>
`;

exports[`Render properties.paragraph object width array - value[0] 1`] = `
<div
  className="ant-skeleton {}"
>
  <div
    className="ant-skeleton-content"
  >
    <h3
      className="ant-skeleton-title"
      style={
        Object {
          "width": "38%",
        }
      }
    />
    <ul
      className="ant-skeleton-paragraph"
    >
      <li
        style={
          Object {
            "width": 700,
          }
        }
      />
      <li
        style={
          Object {
            "width": 250,
          }
        }
      />
      <li
        style={
          Object {
            "width": 500,
          }
        }
      />
    </ul>
  </div>
</div>
`;

exports[`Render properties.title boolean - value[0] 1`] = `
<div
  className="ant-skeleton {}"
>
  <div
    className="ant-skeleton-content"
  >
    <ul
      className="ant-skeleton-paragraph"
    >
      <li
        style={
          Object {
            "width": undefined,
          }
        }
      />
      <li
        style={
          Object {
            "width": "61%",
          }
        }
      />
    </ul>
  </div>
</div>
`;

exports[`Render properties.title object - value[0] 1`] = `
<div
  className="ant-skeleton {}"
>
  <div
    className="ant-skeleton-content"
  >
    <h3
      className="ant-skeleton-title"
      style={
        Object {
          "width": 250,
        }
      }
    />
    <ul
      className="ant-skeleton-paragraph"
    >
      <li
        style={
          Object {
            "width": undefined,
          }
        }
      />
      <li
        style={
          Object {
            "width": undefined,
          }
        }
      />
      <li
        style={
          Object {
            "width": "61%",
          }
        }
      />
    </ul>
  </div>
</div>
`;

exports[`Test Schema default 1`] = `true`;

exports[`Test Schema default 2`] = `null`;

exports[`Test Schema properties.active 1`] = `true`;

exports[`Test Schema properties.active 2`] = `null`;

exports[`Test Schema properties.avatar boolean 1`] = `true`;

exports[`Test Schema properties.avatar boolean 2`] = `null`;

exports[`Test Schema properties.avatar object circle 1`] = `true`;

exports[`Test Schema properties.avatar object circle 2`] = `null`;

exports[`Test Schema properties.avatar object square 1`] = `true`;

exports[`Test Schema properties.avatar object square 2`] = `null`;

exports[`Test Schema properties.button object circle 1`] = `true`;

exports[`Test Schema properties.button object circle 2`] = `null`;

exports[`Test Schema properties.button object round 1`] = `true`;

exports[`Test Schema properties.button object round 2`] = `null`;

exports[`Test Schema properties.paragraph boolean 1`] = `true`;

exports[`Test Schema properties.paragraph boolean 2`] = `null`;

exports[`Test Schema properties.paragraph object width all 1`] = `true`;

exports[`Test Schema properties.paragraph object width all 2`] = `null`;

exports[`Test Schema properties.paragraph object width array 1`] = `true`;

exports[`Test Schema properties.paragraph object width array 2`] = `null`;

exports[`Test Schema properties.title boolean 1`] = `true`;

exports[`Test Schema properties.title boolean 2`] = `null`;

exports[`Test Schema properties.title object 1`] = `true`;

exports[`Test Schema properties.title object 2`] = `null`;
